--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "nest build"
+    "build": "yarn prebuild && tsc"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
