--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "ES2017",
     "module": "commonjs",
     "moduleResolution": "node",
     "outDir": "./dist",
@@ -9,5 +9,6 @@
     // "sourceMap": true,
     "declaration": true,
     "removeComments": true
-  }
+  },
+  "include": ["src"]
 }
