--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nest-weakjs",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "nest module of weakjs",
   "author": "mattia.lau",
   "main": "dist/index.js",
@@ -13,7 +13,7 @@
   "dependencies": {
     "@nestjs/common": "^7.0.0",
     "rxjs": "^6.6.3",
-    "weakjs": "1.0.5"
+    "weakjs": "^1.0.6"
   },
   "keywords": [
     "nestjs",
